# agent-templates

./: fastagent.config.yaml  pyproject.toml
cli-tool/: package.json
fast_agent_project.egg-info/: PKG-INFO  SOURCES.txt
netzkontrast/agent-templates/: tools_documentation.md
netzkontrast/agent-templates/templates/refactored_claude/agents/: task-decomposition-expert.md
netzkontrast/agent-templates/templates/refactored_claude/agents/database/: database-optimization.md
netzkontrast/agent-templates/templates/refactored_claude/agents/deep-research-team/: research-brief-generator.md
netzkontrast/agent-templates/templates/refactored_claude/agents/development-tools/: mcp-expert.md
netzkontrast/agent-templates/templates/refactored_claude/agents/expert-advisors/: agent-expert.md
netzkontrast/agent-templates/templates/refactored_claude/agents/performance-testing/: react-performance-optimization.md
netzkontrast/agent-templates/templates/refactored_claude/agents/podcast-creator-team/: project-supervisor-orchestrator.md
netzkontrast/agent-templates/templates/refactored_claude/agents/security/: api-security-audit.md
netzkontrast/agent-templates/templates/refactored_claude/commands/deployment/: add-changelog.md  ci-setup.md  hotfix-deploy.md  prepare-release.md  rollback-deploy.md
netzkontrast/agent-templates/templates/refactored_claude/commands/documentation/: doc-api.md  migration-guide.md  troubleshooting-guide.md
netzkontrast/agent-templates/templates/refactored_claude/commands/git-workflow/: create-worktrees.md
(+110 files in other folders)
