[project]
name = "fast-agent-project"
version = "0.1.0"
description = "A project using fast-agent"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fast-agent-mcp"
]

[project.urls]
"Homepage" = "https://github.com/example/fast-agent-project"
"Bug Tracker" = "https://github.com/example/fast-agent-project/issues"
